--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    font-family: 'Great Vibes', cursive;
+    
 }
 
 .calligraphy {
@@ -16,6 +16,7 @@ body {
     transform: scale(0.8);
     animation: fadeInScale 3s ease-out forwards;
     color: rgba(73, 120, 60, 0.8);
+    font-family: font-family: 'Great Vibes', cursive;
 }
 
 @keyframes fadeInScale {
