profile pic change

--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@
 }
 
 img {
-  display: block;
   max-width: 100%;
+  height: auto;
+  display: block;
 }
+
 
 body {
   font-family: Arial, sans-serif;
