added accessibility css

--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ p {
     padding: 22px;
     border-radius: 18px;
 }
+.accessibility {
+    padding: 22px;
+    border-radius: 18px;
+}
 .email-form {
     padding: 22px;
     border-radius: 18px;
