--- a/style.css
+++ b/style.css
@@ -5,31 +5,18 @@ body {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 40px;
     margin-bottom: 12px;
 }
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 30px;
     margin-bottom: 10px;
 }
 
 p {
-    font-size: 1.1rem;
+    font-size: 17.6px;
     margin-bottom: 16px;
-}
-.intro-blob{
-    max-width: 920px;
-    margin: 0 auto;
-}
-.profile-pic{
-    display: flex;
-    justify-content: center;
-    margin: 24px auto;
-}
-.content-section {
-    max-width: 920px;
-    margin: 0 auto;
 }
 
 .intro-blob {
@@ -37,6 +24,8 @@ p {
     border-radius: 18px;
     text-align: center;
     margin-bottom: 18px;
+    max-width: 920px;
+    margin: 0 auto;
 }
 
 .profile-pic {
@@ -56,6 +45,8 @@ p {
     display: flex;
     flex-direction: column;
     gap: 18px;
+    max-width: 920px;
+    margin: 0 auto;
 }
 
 .content-section p{
@@ -88,8 +79,5 @@ p {
     margin: 6px 0;
 }
 
-a:hover {
-    text-decoration: underline;
-}
 
 
