--- a/style.css
+++ b/style.css
@@ -7,16 +7,21 @@ body {
 h1 {
     font-size: 40px;
     margin-bottom: 12px;
+    font-weight: bold;
+    color:darkolivegreen
 }
 
 h2 {
     font-size: 30px;
     margin-bottom: 10px;
+    font-weight: bold;
+    color:darkolivegreen
 }
 
 p {
     font-size: 17.6px;
     margin-bottom: 16px;
+    font-weight: bold;
 }
 
 .intro-blob {
