--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ h1 {
     font-size: 40px;
     margin-bottom: 12px;
     font-weight: bold;
-    color:darkolivegreen
+    color:darkolivegreen;
 }
 
 h2 {
     font-size: 30px;
     margin-bottom: 10px;
     font-weight: bold;
-    color:darkolivegreen
+    color:darkolivegreen;
 }
 
 p {
